start checkbox component

--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -24,3 +24,13 @@ $button-font-size-small:12px;
 $button-padding-small:7px 9px;
 $button-font-size-extrasmall:12px;
 $button-padding-extrasmall:4px;
+/* Radio */
+$radio-default-color:#333;
+$radio-default-bgColor:#fff;
+$radio-default-border-color:#ddd;
+
+/* CheckBox */
+$checkbox-default-color:#333;
+$checkbox-default-bgColor:#fff;
+$checkbox-default-border-color:#ddd;
+$checkbox-border-radius:4px;
