--- a/packages/theme/index.scss
+++ b/packages/theme/index.scss
@@ -1,5 +1,7 @@
+@import "./src/iconfont.scss";
 @import "./src/col.scss";
 @import "./src/row.scss";
 @import "./src/button.scss";
 @import "./src/radio.scss";
 @import "./src/checkbox.scss";
+@import "./src/countInput.scss";
