--- a/packages/theme/src/fonts/iconfont.css
+++ b/packages/theme/src/fonts/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1488625410470'); /* IE9*/
-  src: url('iconfont.eot?t=1488625410470#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1488625410470') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1488625410470') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1488625410470#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1488765103165'); /* IE9*/
+  src: url('iconfont.eot?t=1488765103165#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1488765103165') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1488765103165') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1488765103165#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -15,7 +15,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-jia:before { content: "\3460"; }
+.icon-jiahao1:before { content: "\e727"; }
 
-.icon-lnicon35:before { content: "\e627"; }
+.icon-jianhao:before { content: "\e729"; }
 
