--- a/packages/theme/src/iconfont.scss
+++ b/packages/theme/src/iconfont.scss
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "Anduin-iconfont";
-  src: url('src/fonts/iconfont.eot?t=1488625410470'); /* IE9*/
-  src: url('src/fonts/iconfont.eot?t=1488625410470#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('src/fonts/iconfont.woff?t=1488625410470') format('woff'), /* chrome, firefox */
-  url('src/fonts/iconfont.ttf?t=1488625410470') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('src/fonts/iconfont.svg?t=1488625410470#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('src/fonts/iconfont.eot?t=1488765103165'); /* IE9*/
+  src: url('src/fonts/iconfont.eot?t=1488765103165#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('src/fonts/iconfont.woff?t=1488765103165') format('woff'), /* chrome, firefox */
+  url('src/fonts/iconfont.ttf?t=1488765103165') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('src/fonts/iconfont.svg?t=1488765103165#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 [class^="ui-icon-"],[class*="ui-icon-"]{
@@ -15,7 +15,7 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.ui-icon-add:before { content: "\3460"; }
+.ui-icon-add:before { content: "\e727"; }
 
-.ui-icon-reduce:before { content: "\e627"; }
+.ui-icon-reduce:before { content: "\e729"; }
 
