finsh countInput style

--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -34,3 +34,6 @@ $checkbox-default-color:#333;
 $checkbox-default-bgColor:#fff;
 $checkbox-default-border-color:#ddd;
 $checkbox-border-radius:4px;
+/* countInput */
+$countInput-default-color:#333;
+$countInput-default-border-color:#ddd;
