--- a/packages/theme/src/countInput.scss
+++ b/packages/theme/src/countInput.scss
@@ -1,1 +1,41 @@
 @import './common/var.scss';
+
+.ui-count-input{
+	position: relative;
+	width:180px;
+	.ui-count-input-reduce,.ui-count-input-add{
+		cursor:pointer;
+		display: inline-block;;
+		line-height:36px;
+		height:36px;
+		position:absolute;
+       	width:30px;
+       	text-align: center;
+       .ui-icon-reduce,.ui-icon-add{
+       	font-size:24px;
+       	font-weight:bold;
+       }
+	}
+	.ui-count-input-reduce{
+		top:0;
+		left:0;
+		border-right:1px solid $countInput-default-border-color;
+	}
+	.ui-count-input-add{
+		top:0;
+		right:0;
+		border-left:1px solid $countInput-default-border-color;
+	}
+	.ui-count-input-inner{
+       display: inline-block;
+       outline: none;
+       border:1px solid $countInput-default-border-color;
+       border-radius:4px;
+       line-height: 32px;
+       vertical-align:middle;
+       width:132px;
+       padding:1px 24px;
+       text-align: center;
+       font-size:18px;
+	}
+}
