--- a/packages/theme/src/fonts/iconfont.scss
+++ b/packages/theme/src/fonts/iconfont.scss
@@ -7,23 +7,23 @@
   url('./src/fonts/iconfont.svg?t=1488943189191#iconfont') format('svg'); /* iOS 4.1- */
 }
 
-[class^="ui-icon"],[class*="ui-icon"]{
-  font-family:"Anduin iconfont" !important;
+.iconfont {
+  font-family:"iconfont" !important;
   font-size:16px;
   font-style:normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-.ui-icon-time:before { content: "\e603"; }
+.icon-shijian:before { content: "\e603"; }
 
-.ui-icon-date:before { content: "\e605"; }
+.icon-iconfontriqi:before { content: "\e605"; }
 
-.ui-icon-add:before { content: "\e622"; }
+.icon-add:before { content: "\e620"; }
 
-.ui-icon-reduce:before { content: "\e620"; }
+.icon-minus:before { content: "\e622"; }
 
-.ui-icon-arrowUp:before { content: "\e600"; }
+.icon-shangjiantou:before { content: "\e600"; }
 
-.ui-icon-arrowDown:before { content: "\e601"; }
+.icon-xiajiantou:before { content: "\e601"; }
 
