--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -37,3 +37,8 @@ $checkbox-border-radius:4px;
 /* countInput */
 $countInput-default-color:#333;
 $countInput-default-border-color:#ddd;
+/* Input */
+$input-default-color:#333;
+$input-default-bgColor:#fff;
+$input-default-border-color:#b5bda9;
+$input-border-radius:4px;
