fix input component

--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -42,3 +42,4 @@ $input-default-color:#333;
 $input-default-bgColor:#fff;
 $input-default-border-color:#b5bda9;
 $input-border-radius:4px;
+$input-border-focus-color:#1caf9a;
