--- a/packages/theme/src/input.scss
+++ b/packages/theme/src/input.scss
@@ -14,6 +14,7 @@
 		padding:3px 10px;
 		width:100%;
 		box-sizing:border-box;
+		color:$input-default-color;
 		&:focus{
 			border-color:$input-border-focus-color;
 		}
@@ -45,6 +46,8 @@
 		width:100%;
 		border:1px solid $input-default-border-color;
 		border-radius: $input-border-radius;
+		font-size:14px;
+		color:$input-default-color;
 	}
 	.ui-textarea-inner:focus{
 		border-color:$input-border-focus-color;
