--- a/packages/theme/src/input.scss
+++ b/packages/theme/src/input.scss
@@ -35,6 +35,9 @@
       left:50%;
       transform:translate(-50%,-50%);
 	}
+	&.ui-input-group{
+		width:100%;
+	}
 }
 .ui-input-icon+.ui-input-inner{
 	padding-right:36px; 
