--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -43,3 +43,4 @@ $input-default-bgColor:#fff;
 $input-default-border-color:#b5bda9;
 $input-border-radius:4px;
 $input-border-focus-color:#1caf9a;
+$input-prepost-backgroud-color:#fbfdff;
