--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -44,3 +44,4 @@ $input-default-border-color:#b5bda9;
 $input-border-radius:4px;
 $input-border-focus-color:#1caf9a;
 $input-prepost-backgroud-color:#fbfdff;
+$input-prepost-color:#777;
