--- a/packages/theme/src/input.scss
+++ b/packages/theme/src/input.scss
@@ -48,6 +48,7 @@
 			width:1%;
 	       	background-color: $input-prepost-backgroud-color;
        		padding:0px 5px;
+       		color:$input-prepost-color;
 		}
 		.ui-input-pre{
 			border-bottom-right-radius:0;
