--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -2,7 +2,7 @@
 $default-color:#ddd;
 $primary-color:#1caf9a;
 $success-color:#89ad4d;
-$info-color:#29b2e1;;
+$info-color:#29b2e1;
 $warning-color:#fe970a;
 $danger-color:#E04B4A;
 /* Border */
