--- a/packages/theme/src/fonts/iconfont.scss
+++ b/packages/theme/src/fonts/iconfont.scss
@@ -7,10 +7,16 @@
   url('./src/fonts/iconfont.svg?t=1488943189191#iconfont') format('svg'); /* iOS 4.1- */
 }
 
-[class^="ui-icon-"], [class*="ui-icon-"] {
-  font-family:"iconfont" !important;
-  font-size:16px;
+[class^="ui-icon"], [class*="ui-icon"] {
+  font-family:"Anduin iconfont" !important;
+  font-size:12px;
   font-style:normal;
+  font-weight:400;
+  line-height: 1;
+  font-variant: normal;
+  text-transform: none;
+  vertical-align:baseline;
+  display: inline-block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
