--- a/packages/theme/src/iconfont.scss
+++ b/packages/theme/src/iconfont.scss
@@ -9,8 +9,14 @@
 
 [class^="ui-icon"],[class*="ui-icon"]{
   font-family:"Anduin iconfont" !important;
-  font-size:16px;
+  font-size:14px;
   font-style:normal;
+  font-weight:400;
+  line-height: 1;
+  font-variant: normal;
+  text-transform: none;
+  vertical-align:baseline;
+  display: inline-block;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
