--- a/packages/theme/index.scss
+++ b/packages/theme/index.scss
@@ -1,4 +1,5 @@
 @import "./src/iconfont.scss";
+@import "./src/common/transition.scss";
 @import "./src/col.scss";
 @import "./src/row.scss";
 @import "./src/button.scss";
