--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -1,3 +1,5 @@
+/* tansition */
+$zoom-transition:transform 0.3s cubic-bezier(0.23, 1, 0.32, 1) 0.1s,opacity 0.3s cubic-bezier(0.23, 1, 0.32, 1) 0.1s;
 /* color */
 $default-color:#ddd;
 $primary-color:#1caf9a;
