--- a/packages/theme/src/common/transition.scss
+++ b/packages/theme/src/common/transition.scss
@@ -1,14 +1,15 @@
 
 @import "./var.scss";
 
-.ui-zoom-in-down-enter,
-.ui-zoom-in-down-leave-active{
-   opacity: 0;
-   transform:scaleY(0);
-}
-.ui-zoom-in-down-enter-active{
+.ui-zoom-in-down-enter-active,
+.ui-zoom-in-down-enter-leave{
 	opacity: 1;
 	transform:scaleY(1);
 	transition:$zoom-transition;
 	transform-origin:center bottom;
+}
+.ui-zoom-in-down-enter,
+.ui-zoom-in-down-leave-active{
+   opacity: 0;
+   transform:scaleY(0);
 }
