--- a/packages/theme/src/select-down.scss
+++ b/packages/theme/src/select-down.scss
@@ -1,3 +1,10 @@
+@import "./common/var.scss";
 .ui-select-dropdown{
 	position: absolute;
+	background:#fff;
+	border:1px solid $input-default-border-color;
+	border-radius:2px;
+	box-sizing:border-box;
+	margin: 5px 0;
+	box-shadow: 0 2px 4px rgba(0,0,0,0.12),0 0 6px rgba(0,0,0,0.04);
 }
