fix ui-option list-item style

--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -47,3 +47,7 @@ $input-border-radius:4px;
 $input-border-focus-color:#1caf9a;
 $input-prepost-backgroud-color:#fbfdff;
 $input-prepost-color:#777;
+/*Select Option*/
+$option-hover-bgColor:#d5d7da;
+$option-selected-bgColor:$primary-color;
+$option-selected-color:#fff;
