--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -47,6 +47,14 @@ $input-border-radius:4px;
 $input-border-focus-color:#1caf9a;
 $input-prepost-backgroud-color:#fbfdff;
 $input-prepost-color:#777;
+$input-small-font-size:13px;
+$input-mini-font-size:12px;
+$input-font-size:14px;
+$input-large-font-size:16px;
+$input-small-height:30px;
+$input-mini-height:22px;
+$input-height:36px;
+$input-large-height:42px;
 /*Select Option*/
 $option-hover-bgColor:#d5d7da;
 $option-selected-bgColor:$primary-color;
