--- a/packages/theme/src/scroll-bar.scss
+++ b/packages/theme/src/scroll-bar.scss
@@ -3,6 +3,7 @@
 	.ui-scroll-bar-list{
 		padding:0;
 		margin:0;
+		list-style: none;
 		li.ui-option{
 			list-style:none;
 			padding:8px 10px;
@@ -14,7 +15,13 @@
 				background:$option-selected-bgColor;
 				color:$option-selected-color;
 			}
+			&.ui-option-multiple.selected{
+				background:#fff;
+				color:$option-selected-bgColor;
+				:after{
+					
+				}
+			}
 		}
-		list-style: none;
 	}
 }
