--- a/packages/theme/src/iconfont.scss
+++ b/packages/theme/src/iconfont.scss
@@ -1,5 +1,5 @@
 
-@font-face {font-family: "iconfont";
+@font-face {font-family: "Anduin iconfont";
   src: url('./src/fonts/iconfont.eot?t=1493711252996'); /* IE9*/
   src: url('./src/fonts/iconfont.eot?t=1493711252996#iefix') format('embedded-opentype'), /* IE6-IE8 */
   url('./src/fonts/iconfont.woff?t=1493711252996') format('woff'), /* chrome, firefox */
@@ -29,11 +29,11 @@
 
 .icon-iconfontriqi:before { content: "\e605"; }
 
-.icon-add:before { content: "\e620"; }
+.ui-icon-reduce:before { content: "\e620"; }
 
-.icon-minus:before { content: "\e622"; }
+.ui-icon-add:before { content: "\e622"; }
 
-.icon-arrowUp:before { content: "\e600"; }
+.ui-icon-arrowUp:before { content: "\e600"; }
 
-.icon-arrowDown:before { content: "\e601"; }
+.ui-icon-arrowDown:before { content: "\e601"; }
 
