--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -59,3 +59,8 @@ $input-large-height:42px;
 $option-hover-bgColor:#d5d7da;
 $option-selected-bgColor:$primary-color;
 $option-selected-color:#fff;
+/* tag */
+$tag-color:$primary-color;
+$tag-border:1px solid rgba(78,227,206,0.8);
+$tag-border-radius:2px;
+$tag-bgColor:rgba(78,227,206,0.3);
