--- a/packages/theme/src/iconfont.scss
+++ b/packages/theme/src/iconfont.scss
@@ -25,7 +25,7 @@
 
 .icon-check:before { content: "\e645"; }
 
-.icon-close:before { content: "\e646"; }
+.ui-icon-close:before { content: "\e646"; }
 
 .icon-iconfontriqi:before { content: "\e605"; }
 
