--- a/packages/theme/src/tag.scss
+++ b/packages/theme/src/tag.scss
@@ -15,6 +15,11 @@
 			display: inline-block;
 			margin:3px 0px 5px 3px;
 			padding:0 5px;
+			line-height: 24px;
+			height:24px;
+		   .ui-tag-text{
+		   	font-size:14px;
+		   }
 		   .ui-icon-tag{
 		   	 font-size:14px;
 		   	 cursor:pointer;
