--- a/packages/theme/src/tag.scss
+++ b/packages/theme/src/tag.scss
@@ -23,6 +23,15 @@
 		   .ui-icon-tag{
 		   	 font-size:14px;
 		   	 cursor:pointer;
+		   	 font-weight:600;
+		   	 height:15px;
+		   	 line-height: 15px;
+		   }
+		   .ui-icon-tag:hover{
+               border-radius:50%;
+               background: darken($tag-color,5%);
+               color:#fff;
+
 		   }
 		}
 	}
