--- a/packages/theme/index.scss
+++ b/packages/theme/index.scss
@@ -9,5 +9,6 @@
 @import "./src/input.scss";
 @import "./src/select.scss";
 @import "./src/scroll-bar.scss";
+@import "./src/option-group.scss";
 @import "./src/select-down.scss";
 @import "./src/tag.scss";
