--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -59,6 +59,9 @@ $input-large-height:42px;
 $option-hover-bgColor:#d5d7da;
 $option-selected-bgColor:$primary-color;
 $option-selected-color:#fff;
+$option-font-size:14px;
+/*Option group*/
+$option-group-font-size:12px;
 /* tag */
 $tag-color:$primary-color;
 $tag-border:1px solid rgba(78,227,206,0.8);
