fix option-group.scss and option style

--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -60,8 +60,10 @@ $option-hover-bgColor:#d5d7da;
 $option-selected-bgColor:$primary-color;
 $option-selected-color:#fff;
 $option-font-size:14px;
+$option-color:#333;
 /*Option group*/
 $option-group-font-size:12px;
+$option-group-color:#999;
 /* tag */
 $tag-color:$primary-color;
 $tag-border:1px solid rgba(78,227,206,0.8);
