--- a/packages/theme/src/scroll-bar.scss
+++ b/packages/theme/src/scroll-bar.scss
@@ -7,7 +7,10 @@
         li.ui-option {
             list-style: none;
             padding: 8px 10px;
+            padding-left:20px;
             cursor: pointer;
+            font-size:$option-font-size;
+            color:$option-color;
             &:hover {
                 background: $option-hover-bgColor;
             }
