--- a/packages/theme/src/select.scss
+++ b/packages/theme/src/select.scss
@@ -1,3 +1,4 @@
+@import "./common/var.scss"
 .ui-select{
 	display: inline-block;
 	.ui-input{
@@ -14,6 +15,11 @@
 		}
 		.ui-input-inner{
 			cursor:pointer;
+		}
+	}
+	&.ui-select-disabled{
+		.ui-input{
+
 		}
 	}
 }
