--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -55,9 +55,9 @@ $input-small-height:30px;
 $input-mini-height:22px;
 $input-height:36px;
 $input-large-height:42px;
-$input-disabled-color:lighten($primary-color,30%);
-$input-disabled-border-color:lighten($primary-color,20%);
-$input-disabled-bg-color:lighten($primary-color,10%);
+$input-disabled-color:#bbb;
+$input-disabled-border-color:#b9b9b9;
+$input-disabled-bg-color:#eee;
 /*Select Option*/
 $option-hover-bgColor:#d5d7da;
 $option-selected-bgColor:$primary-color;
