add option.vue disabled setting

--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -64,6 +64,7 @@ $option-selected-bgColor:$primary-color;
 $option-selected-color:#fff;
 $option-font-size:14px;
 $option-color:#333;
+$option-disabled-color:#b9b9b9;
 /*Option group*/
 $option-group-font-size:12px;
 $option-group-color:#999;
