add select.vue input style

--- a/packages/theme/src/tag.scss
+++ b/packages/theme/src/tag.scss
@@ -35,4 +35,13 @@
 		   }
 		}
 	}
+	.ui-select-input{
+		border:none;
+		margin-left:10px;
+		width:20px;
+		line-height: 26px;
+		outline:none;
+		height:26px;
+		background: transparent;
+	}
 }
