add select.vue input

--- a/packages/theme/src/common/var.scss
+++ b/packages/theme/src/common/var.scss
@@ -73,3 +73,4 @@ $tag-color:$primary-color;
 $tag-border:1px solid rgba(78,227,206,0.8);
 $tag-border-radius:2px;
 $tag-bgColor:rgba(78,227,206,0.3);
+$tag-input-color:#666;
